<resources>
    <string name="app_name">StyleShow</string>
    <string name="app_logo_description">StyleShow Logo</string>

    <!-- Main (bottom bar) navigation -->
    <string name="title_home">Home</string>
    <string name="title_messages">Messages</string>
    <string name="title_profile">Profile</string>

    <!-- Dialog -->
    <string name="dialog_ok">Yes</string>
    <string name="dialog_cancel">Cancel</string>

    <!-- Login activity -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Invalid password</string>
    <string name="login_failed">Login failed</string>
    <string name="action_sign_in">Log in</string>
    <string name="welcome">Welcome</string>

    <!-- Register activity -->
    <string name="register_failed">Register failed</string>
    <string name="action_register">Register</string>

    <!-- Network -->
    <string name="network_losing">Your network connection is fading.</string>
    <string name="network_available">Your network connection is back.</string>

    <!-- No network activity -->
    <string name="no_network">There is a problem with your network connection. The app will not work without a proper network connection</string>

    <!-- Home fragment -->
    <string name="new_post_btn_description">Make new post</string>
    <string name="hint_query">Username</string>

    <!-- New post activity -->
    <string name="title_new_post">New Post</string>
    <string name="hint_caption">Caption</string>
    <string name="hint_shoe_url">Link</string>
    <string name="action_post">Post</string>
    <string name="invalid_post">Invalid post details</string>
    <string name="no_image_selected">You need to select an image!</string>
    <string name="post_successful">Post published!</string>
    <string name="post_failed">Error publishing post...</string>
    <string name="cannot_post">You cannot make a post without an image.</string>

    <!-- Profile fragment -->
    <string name="action_sign_out">Sign Out</string>
    <string name="action_user_guide">User Guide</string>
    <string name="signed_out">You have been signed out</string>

    <!-- User_profile activity -->
    <string name="action_message">Message</string>

    <!-- Post activity -->
    <string name="hint_comment">Comment</string>
    <string name="action_comment">Comment</string>
    <string name="delete_post_dialog_title">Delete post</string>
    <string name="delete_post_dialog_message">Are you sure you want to delete this post?</string>
    <string name="delete_post_success">Post deleted.</string>
    <string name="delete_comment_dialog_title">Delete comment</string>
    <string name="delete_comment_dialog_message">Are you sure you want to delete this comment?</string>
    <string name="delete_comment_success">Comment deleted.</string>

    <!-- Select user activity -->
    <string name="title_select_user">Select User to Message</string>

    <!-- Chat activity -->
    <string name="hint_message">Message</string>
    <string name="action_send_message">Send message</string>
    <string name="delete_message_dialog_title">Delete message</string>
    <string name="delete_message_dialog_message">Are you sure you want to delete this message?</string>
    <string name="delete_message_success">Message deleted.</string>
    <string name="no_notifications">No notifications will be shown.</string>
    <string name="notifications_dialog_title">Enable notifications (please)</string>
    <string name="notifications_dialog_message">Notifications will be sent whenever a user messages you. They
    are great way to keep on top of your conversations.</string>
    <string name="notifications_dialog_ok">OK</string>
    <string name="notifications_dialog_cancel">No thanks</string>

    <!-- UserProfile -->
    <string name="profile_picture_description">Profile picture</string>

    <!-- Post -->
    <string name="post_picture_description">Post picture</string>

    <!-- Comment -->
    <string name="commenter_picture_description">Commenter picture</string>

    <!-- Dynamic posts view -->
    <string name="grid_picture_description">Grid</string>
    <string name="carousel_picture_description">Carousel</string>
    <string name="dynamic_posts_view_sp_layout_key">layout</string>

    <!-- Post actions view -->
    <string name="like_picture_description">Like</string>
    <string name="unlike_picture_description">Remove like</string>
    <string name="comment_picture_description">Comment</string>
    <string name="share_picture_description">Share</string>
    <string name="open_in_browser_picture_description">Open in browser</string>
    <string name="delete_picture_description">Delete</string>
    <string name="title_open_in_browser">Open in browser</string>

    <!-- Message notification service -->
    <string name="message_notification_channel_id">Messages</string>
    <string name="message_notification_channel_name">Message Notifications</string>
    <string name="message_notification_channel_description">Notifications for new messages</string>
</resources>
