<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.new_post.NewPostActivity"
        >
    <data>
        <variable
                name="viewModel"
                type="com.styleshow.ui.new_post.NewPostViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <TextView
                android:id="@+id/tv_title"
                android:text="@string/title_new_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:layout_marginTop="8dp"
                />

        <com.styleshow.components.SquareFrameLayout
                android:id="@+id/image_wrapper"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp">
            <com.styleshow.components.PicassoImageView
                    android:id="@+id/iv_image"
                    android:src="@{viewModel.imageUri}"
                    app:placeholder="@drawable/img_placeholder"
                    tools:src="@drawable/img_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/post_picture_description"
                    />
        </com.styleshow.components.SquareFrameLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_caption"
                android:hint="@string/hint_caption"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_caption"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_shoe_url"
                android:hint="@string/hint_shoe_url"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_shoe_url"
                    android:inputType="textUri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/btn_post"
                android:text="@string/action_post"
                android:enabled="@{viewModel.imageUri != null}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/flow_ets"
                />

        <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flow_ets"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/image_wrapper"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:constraint_referenced_ids="layout_caption,layout_shoe_url"
                android:orientation="vertical"
                app:flow_verticalGap="8dp"
                />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
